Updated with version: 4.37.0 changes

--- a/adblock-betafish/CHANGELOG.txt
+++ b/adblock-betafish/CHANGELOG.txt
@@ -2,6 +2,15 @@
 
 UNRELEASED:
 
+Version: 4.37.0, Date: 2021-09-27
+- Fixed an issue when printing in Chrome with AdBlock enabled
+- Fixed an issue with the Premium Sync feature
+- Fixed an issue with the 'Submit Feedback' button
+- Fixed an issue with the 'New' Badge text showing on blank or empty tabs
+- Updated the minimum Chrome version to 60
+- Fixed an issue with Nordic language filter list incorrectly in the language dropdown on the Filter list tab of the AdBlock Options page
+- Fixed an issue with AdBlock double counting some blocked items
+
 Version: 4.36.0, Date: 2021-09-08
 - Updated the bundled Snippets library
 
