--- a/adblock-betafish/CHANGELOG.txt
+++ b/adblock-betafish/CHANGELOG.txt
@@ -2,6 +2,9 @@
 
 UNRELEASED:
 
+Version: 4.38.0, Date: 2021-10-11
+- Added Distraction Control for AdBlock Premium users
+
 Version: 4.37.0, Date: 2021-09-27
 - Fixed an issue when printing in Chrome with AdBlock enabled
 - Fixed an issue with the Premium Sync feature
