--- a/_locales/en_US/messages.json
+++ b/_locales/en_US/messages.json
@@ -2822,7 +2822,7 @@
     "description": "Checbox label text for help flow in popup menu."
   },
   "autoplay_videos": {
-    "message": "Auto-play videos",
+    "message": "Floating videos",
     "description": "Checbox label text for help flow in popup menu."
   },
   "surveys": {
@@ -3149,6 +3149,54 @@
   },
   "adblock_vpn": {
     "message": "AdBlock VPN",
+    "description": "Text of a Options page lower menu button"
+  },
+  "adblock_newsletter": {
+    "message": "AdBlock Newsletter",
+    "description": "Text of a Options page lower menu button"
+  },
+  "keep_touch": {
+    "message": "Keep in Touch!",
+    "description": "Text of a Options page lower menu button"
+  },
+  "all_set": {
+    "message": "All Set!",
+    "description": "Text of a Options page lower menu button"
+  },
+  "youre_awesome": {
+    "message": "Thanks, you're awesome!",
+    "description": "Text of a Options page lower menu button"
+  },
+  "added_mailing_list": {
+    "message": "You've been added to the AdBlock mailing list.",
+    "description": "Text of a Options page lower menu button"
+  },
+  "sign_up_mailing": {
+    "message": "Sign up for our mailing list to stay up-to-date on the latest at AdBlock.",
+    "description": "Text of a Options page lower menu button"
+  },
+  "email_address_placeholder": {
+    "message": "Enter your email address",
+    "description": "Text of a Options page lower menu button"
+  },
+  "please_click_confirm": {
+    "message": "Please click here to confirm that you would like to receive occasional email updates from our team.",
+    "description": "Text of a Options page lower menu button"
+  },
+  "never_share_email": {
+    "message": "We will never share your email with anyone.",
+    "description": "Text of a Options page lower menu button"
+  },
+  "join_mailing_list": {
+    "message": "Join our mailing list",
+    "description": "Text of a Options page lower menu button"
+  },
+  "valid_email_address": {
+    "message": "Please provide a valid email address",
+    "description": "Text of a Options page lower menu button"
+  },
+  "please_confirm": {
+    "message": "Please confirm to continue",
     "description": "Text of a Options page lower menu button"
   },
   "youve_blocked_num_ads": {
