Updated with version: 4.39.0 changes

--- a/_locales/de/messages.json
+++ b/_locales/de/messages.json
@@ -2822,7 +2822,7 @@
     "description": "Checbox label text for help flow in popup menu."
   },
   "autoplay_videos": {
-    "message": "Auto-Play von Videos",
+    "message": "Bild-in-Bild-Videos",
     "description": "Checbox label text for help flow in popup menu."
   },
   "surveys": {
@@ -3149,6 +3149,54 @@
   },
   "adblock_vpn": {
     "message": "AdBlock VPN",
+    "description": "Text of a Options page lower menu button"
+  },
+  "adblock_newsletter": {
+    "message": "AdBlock-Newsletter",
+    "description": "Text of a Options page lower menu button"
+  },
+  "keep_touch": {
+    "message": "Bleiben Sie auf dem Laufenden!",
+    "description": "Text of a Options page lower menu button"
+  },
+  "all_set": {
+    "message": "Schon fertig!",
+    "description": "Text of a Options page lower menu button"
+  },
+  "youre_awesome": {
+    "message": "Vielen Dank!",
+    "description": "Text of a Options page lower menu button"
+  },
+  "added_mailing_list": {
+    "message": "Sie wurden zur AdBlock-Mailingliste hinzugefügt.",
+    "description": "Text of a Options page lower menu button"
+  },
+  "sign_up_mailing": {
+    "message": "Melden Sie sich für unsere Mailingliste an, um über das Neueste von AdBlock immer auf dem Laufenden zu bleiben.",
+    "description": "Text of a Options page lower menu button"
+  },
+  "email_address_placeholder": {
+    "message": "Geben Sie Ihre E-Mail-Adresse ein",
+    "description": "Text of a Options page lower menu button"
+  },
+  "please_click_confirm": {
+    "message": "Bitte klicken Sie hier, um zu bestätigen, dass Sie gelegentlich Neuigkeiten per E-Mail von unserem Team erhalten möchten.",
+    "description": "Text of a Options page lower menu button"
+  },
+  "never_share_email": {
+    "message": "Wir werden Ihre E-Mail niemals an Dritte weitergeben.",
+    "description": "Text of a Options page lower menu button"
+  },
+  "join_mailing_list": {
+    "message": "Registrieren Sie sich für unsere Mailingliste",
+    "description": "Text of a Options page lower menu button"
+  },
+  "valid_email_address": {
+    "message": "Bitte geben Sie eine gültige E-Mail Adresse an",
+    "description": "Text of a Options page lower menu button"
+  },
+  "please_confirm": {
+    "message": "Bitte bestätigen Sie, um fortzufahren",
     "description": "Text of a Options page lower menu button"
   },
   "youve_blocked_num_ads": {
