--- a/_locales/es/messages.json
+++ b/_locales/es/messages.json
@@ -2822,7 +2822,7 @@
     "description": "Checbox label text for help flow in popup menu."
   },
   "autoplay_videos": {
-    "message": "Reproducción automática de vídeos",
+    "message": "Vídeos flotantes",
     "description": "Checbox label text for help flow in popup menu."
   },
   "surveys": {
@@ -3149,6 +3149,54 @@
   },
   "adblock_vpn": {
     "message": "AdBlock VPN",
+    "description": "Text of a Options page lower menu button"
+  },
+  "adblock_newsletter": {
+    "message": "Boletín de AdBlock",
+    "description": "Text of a Options page lower menu button"
+  },
+  "keep_touch": {
+    "message": "¡Mantengamos el contacto!",
+    "description": "Text of a Options page lower menu button"
+  },
+  "all_set": {
+    "message": "¡Todo listo!",
+    "description": "Text of a Options page lower menu button"
+  },
+  "youre_awesome": {
+    "message": "¡Gracias, eres increíble!",
+    "description": "Text of a Options page lower menu button"
+  },
+  "added_mailing_list": {
+    "message": "Te hemos añadido a la lista de correo de AdBlock.",
+    "description": "Text of a Options page lower menu button"
+  },
+  "sign_up_mailing": {
+    "message": "Suscríbete a nuestra lista de correo para estar al día de las últimas novedades de AdBlock.",
+    "description": "Text of a Options page lower menu button"
+  },
+  "email_address_placeholder": {
+    "message": "Introduce tu dirección de correo electrónico",
+    "description": "Text of a Options page lower menu button"
+  },
+  "please_click_confirm": {
+    "message": "Haz clic aquí para confirmar que deseas recibir por correo electrónico actualizaciones ocasionales por parte de nuestro equipo.",
+    "description": "Text of a Options page lower menu button"
+  },
+  "never_share_email": {
+    "message": "Jamás compartiremos tu correo electrónico con nadie.",
+    "description": "Text of a Options page lower menu button"
+  },
+  "join_mailing_list": {
+    "message": "Únete a nuestra lista de correo",
+    "description": "Text of a Options page lower menu button"
+  },
+  "valid_email_address": {
+    "message": "Proporciona una dirección de correo electrónico válida",
+    "description": "Text of a Options page lower menu button"
+  },
+  "please_confirm": {
+    "message": "Confirma para continuar",
     "description": "Text of a Options page lower menu button"
   },
   "youve_blocked_num_ads": {
