--- a/_locales/fr/messages.json
+++ b/_locales/fr/messages.json
@@ -544,7 +544,7 @@
     "description": "A filter list"
   },
   "filternordic": {
-    "message": "Filtres nordiques + Easylist",
+    "message": "Nordic Filters + EasyList",
     "description": "A filter list combined with EasyList"
   },
   "blacklistclickmessage": {
@@ -2822,7 +2822,7 @@
     "description": "Checbox label text for help flow in popup menu."
   },
   "autoplay_videos": {
-    "message": "Lecture automatique des vidéos",
+    "message": "Vidéos flottantes",
     "description": "Checbox label text for help flow in popup menu."
   },
   "surveys": {
@@ -3149,6 +3149,54 @@
   },
   "adblock_vpn": {
     "message": "VPN AdBlock",
+    "description": "Text of a Options page lower menu button"
+  },
+  "adblock_newsletter": {
+    "message": "Newsletter AdBlock",
+    "description": "Text of a Options page lower menu button"
+  },
+  "keep_touch": {
+    "message": "Gardez le contact !",
+    "description": "Text of a Options page lower menu button"
+  },
+  "all_set": {
+    "message": "Tout est prêt !",
+    "description": "Text of a Options page lower menu button"
+  },
+  "youre_awesome": {
+    "message": "Merci, vous êtes super !",
+    "description": "Text of a Options page lower menu button"
+  },
+  "added_mailing_list": {
+    "message": "Vous avez été ajouté à la liste de diffusion d'AdBlock.",
+    "description": "Text of a Options page lower menu button"
+  },
+  "sign_up_mailing": {
+    "message": "Inscrivez-vous à notre liste de diffusion pour rester au courant des dernières nouveautés d'AdBlock.",
+    "description": "Text of a Options page lower menu button"
+  },
+  "email_address_placeholder": {
+    "message": "Indiquez votre adresse e-mail",
+    "description": "Text of a Options page lower menu button"
+  },
+  "please_click_confirm": {
+    "message": "Veuillez cliquer ici pour confirmer que vous souhaitez recevoir des mises à jour occasionnelles par e-mail de la part de notre équipe.",
+    "description": "Text of a Options page lower menu button"
+  },
+  "never_share_email": {
+    "message": "Nous ne communiquerons jamais votre adresse e-mail à qui que ce soit.",
+    "description": "Text of a Options page lower menu button"
+  },
+  "join_mailing_list": {
+    "message": "Rejoindre notre liste de diffusion",
+    "description": "Text of a Options page lower menu button"
+  },
+  "valid_email_address": {
+    "message": "Veuillez fournir une adresse e-mail valide",
+    "description": "Text of a Options page lower menu button"
+  },
+  "please_confirm": {
+    "message": "Veuillez confirmer pour continuer",
     "description": "Text of a Options page lower menu button"
   },
   "youve_blocked_num_ads": {
