--- a/_locales/it/messages.json
+++ b/_locales/it/messages.json
@@ -2822,7 +2822,7 @@
     "description": "Checbox label text for help flow in popup menu."
   },
   "autoplay_videos": {
-    "message": "Riproduzione automatica video",
+    "message": "Video fluttuanti",
     "description": "Checbox label text for help flow in popup menu."
   },
   "surveys": {
@@ -3149,6 +3149,54 @@
   },
   "adblock_vpn": {
     "message": "AdBlock VPN",
+    "description": "Text of a Options page lower menu button"
+  },
+  "adblock_newsletter": {
+    "message": "Newsletter di AdBlock",
+    "description": "Text of a Options page lower menu button"
+  },
+  "keep_touch": {
+    "message": "Teniamoci in contatto!",
+    "description": "Text of a Options page lower menu button"
+  },
+  "all_set": {
+    "message": "È tutto pronto!",
+    "description": "Text of a Options page lower menu button"
+  },
+  "youre_awesome": {
+    "message": "Grazie mille!",
+    "description": "Text of a Options page lower menu button"
+  },
+  "added_mailing_list": {
+    "message": "Ti abbiamo aggiunto alla mailing list di AdBlock.",
+    "description": "Text of a Options page lower menu button"
+  },
+  "sign_up_mailing": {
+    "message": "Registrati alla nostra mailing list per non perderti le ultime notizie di AdBlock.",
+    "description": "Text of a Options page lower menu button"
+  },
+  "email_address_placeholder": {
+    "message": "Inserisci il tuo indirizzo email",
+    "description": "Text of a Options page lower menu button"
+  },
+  "please_click_confirm": {
+    "message": "Fai clic qui per confermare di voler ricevere occasionali aggiornamenti via email dal nostro team.",
+    "description": "Text of a Options page lower menu button"
+  },
+  "never_share_email": {
+    "message": "Non condivideremo la tua email con nessuno.",
+    "description": "Text of a Options page lower menu button"
+  },
+  "join_mailing_list": {
+    "message": "Iscriviti alla nostra mailing list",
+    "description": "Text of a Options page lower menu button"
+  },
+  "valid_email_address": {
+    "message": "Inserisci un indirizzo email valido",
+    "description": "Text of a Options page lower menu button"
+  },
+  "please_confirm": {
+    "message": "Conferma per continuare",
     "description": "Text of a Options page lower menu button"
   },
   "youve_blocked_num_ads": {
