--- a/_locales/ja/messages.json
+++ b/_locales/ja/messages.json
@@ -2822,7 +2822,7 @@
     "description": "Checbox label text for help flow in popup menu."
   },
   "autoplay_videos": {
-    "message": "自動プレイ動画",
+    "message": "フローティング動画広告",
     "description": "Checbox label text for help flow in popup menu."
   },
   "surveys": {
@@ -3149,6 +3149,54 @@
   },
   "adblock_vpn": {
     "message": "AdBlock VPN",
+    "description": "Text of a Options page lower menu button"
+  },
+  "adblock_newsletter": {
+    "message": "AdBlockニュースレター",
+    "description": "Text of a Options page lower menu button"
+  },
+  "keep_touch": {
+    "message": "最新情報をお見逃しなく！",
+    "description": "Text of a Options page lower menu button"
+  },
+  "all_set": {
+    "message": "完了！",
+    "description": "Text of a Options page lower menu button"
+  },
+  "youre_awesome": {
+    "message": "ご登録ありがとうございます！",
+    "description": "Text of a Options page lower menu button"
+  },
+  "added_mailing_list": {
+    "message": "AdBlockのメーリングリストに登録ました。",
+    "description": "Text of a Options page lower menu button"
+  },
+  "sign_up_mailing": {
+    "message": "メーリングリストに登録すると、AdBlockの最新情報が入手できます。",
+    "description": "Text of a Options page lower menu button"
+  },
+  "email_address_placeholder": {
+    "message": "メールアドレスを入力してください",
+    "description": "Text of a Options page lower menu button"
+  },
+  "please_click_confirm": {
+    "message": "ここをクリックして、私たちからの最新情報を受け取ることを承認してください。",
+    "description": "Text of a Options page lower menu button"
+  },
+  "never_share_email": {
+    "message": "お客様のメールアドレスを第三者と共有することはありません。",
+    "description": "Text of a Options page lower menu button"
+  },
+  "join_mailing_list": {
+    "message": "メーリングリストに参加しましょう",
+    "description": "Text of a Options page lower menu button"
+  },
+  "valid_email_address": {
+    "message": "有効なメールアドレスを入力してください",
+    "description": "Text of a Options page lower menu button"
+  },
+  "please_confirm": {
+    "message": "続行する前に承認してください",
     "description": "Text of a Options page lower menu button"
   },
   "youve_blocked_num_ads": {
@@ -3542,7 +3590,7 @@
     "description": "Sub-header on the distraction control options page"
   },
   "prevent_videos": {
-    "message": "動画が自動的に再生されないようにしたり、ブラウズ中にほとんどのフローティング広告が出現しないようにします。\n",
+    "message": "動画が自動的に再生されないようにしたり、ブラウズ中にほとんどのフローティング広告が出現しないようにします。",
     "description": "Description of 'stop autoplay videos' on the distraction control options page"
   },
   "hide_newsletter_popups": {
