--- a/_locales/nl/messages.json
+++ b/_locales/nl/messages.json
@@ -2822,7 +2822,7 @@
     "description": "Checbox label text for help flow in popup menu."
   },
   "autoplay_videos": {
-    "message": "Automatisch afspelende video's",
+    "message": "Zwevende video's",
     "description": "Checbox label text for help flow in popup menu."
   },
   "surveys": {
@@ -3149,6 +3149,54 @@
   },
   "adblock_vpn": {
     "message": "AdBlock VPN",
+    "description": "Text of a Options page lower menu button"
+  },
+  "adblock_newsletter": {
+    "message": "AdBlock-nieuwsbrief",
+    "description": "Text of a Options page lower menu button"
+  },
+  "keep_touch": {
+    "message": "Blijf op de hoogte!",
+    "description": "Text of a Options page lower menu button"
+  },
+  "all_set": {
+    "message": "Klaar!",
+    "description": "Text of a Options page lower menu button"
+  },
+  "youre_awesome": {
+    "message": "Bedankt, je bent geweldig!",
+    "description": "Text of a Options page lower menu button"
+  },
+  "added_mailing_list": {
+    "message": "Je bent toegevoegd aan de mailinglist van AbBlock.",
+    "description": "Text of a Options page lower menu button"
+  },
+  "sign_up_mailing": {
+    "message": "Meld je aan voor onze mailinglist om op de hoogte te blijven van het laatste nieuws van AbBlock.",
+    "description": "Text of a Options page lower menu button"
+  },
+  "email_address_placeholder": {
+    "message": "Voer je e-mailadres in",
+    "description": "Text of a Options page lower menu button"
+  },
+  "please_click_confirm": {
+    "message": "Klik hier om te bevestigen dat je af en toe e-mailupdates wilt ontvangen van ons team.",
+    "description": "Text of a Options page lower menu button"
+  },
+  "never_share_email": {
+    "message": "We zullen je e-mailadres nooit met anderen delen.",
+    "description": "Text of a Options page lower menu button"
+  },
+  "join_mailing_list": {
+    "message": "Stuur mij e-mails",
+    "description": "Text of a Options page lower menu button"
+  },
+  "valid_email_address": {
+    "message": "Voer een geldig e-mailadres in",
+    "description": "Text of a Options page lower menu button"
+  },
+  "please_confirm": {
+    "message": "Bevestig om door te gaan",
     "description": "Text of a Options page lower menu button"
   },
   "youve_blocked_num_ads": {
