--- a/_locales/pt_BR/messages.json
+++ b/_locales/pt_BR/messages.json
@@ -2822,7 +2822,7 @@
     "description": "Checbox label text for help flow in popup menu."
   },
   "autoplay_videos": {
-    "message": "Reproduzir vídeos automaticamente",
+    "message": "Vídeos flutuantes",
     "description": "Checbox label text for help flow in popup menu."
   },
   "surveys": {
@@ -3149,6 +3149,54 @@
   },
   "adblock_vpn": {
     "message": "AdBlock VPN",
+    "description": "Text of a Options page lower menu button"
+  },
+  "adblock_newsletter": {
+    "message": "Boletim do AdBlock",
+    "description": "Text of a Options page lower menu button"
+  },
+  "keep_touch": {
+    "message": "Mantenha contato!",
+    "description": "Text of a Options page lower menu button"
+  },
+  "all_set": {
+    "message": "Tudo pronto!",
+    "description": "Text of a Options page lower menu button"
+  },
+  "youre_awesome": {
+    "message": "Obrigado, você é demais!",
+    "description": "Text of a Options page lower menu button"
+  },
+  "added_mailing_list": {
+    "message": "Você foi adicionado(a) à nossa lista de e-mail.",
+    "description": "Text of a Options page lower menu button"
+  },
+  "sign_up_mailing": {
+    "message": "Inscreva-se na nossa lista de e-mail para acompanhar as novidades sobre o AdBlock.",
+    "description": "Text of a Options page lower menu button"
+  },
+  "email_address_placeholder": {
+    "message": "Digite seu endereço de e-mail",
+    "description": "Text of a Options page lower menu button"
+  },
+  "please_click_confirm": {
+    "message": "Clique aqui para confirmar que deseja receber atualizações periódicas por e-mail da nossa equipe.",
+    "description": "Text of a Options page lower menu button"
+  },
+  "never_share_email": {
+    "message": "Nunca divulgaremos o seu e-mail a ninguém.",
+    "description": "Text of a Options page lower menu button"
+  },
+  "join_mailing_list": {
+    "message": "Participe da nossa lista de e-mail",
+    "description": "Text of a Options page lower menu button"
+  },
+  "valid_email_address": {
+    "message": "Informe um endereço de e-mail válido",
+    "description": "Text of a Options page lower menu button"
+  },
+  "please_confirm": {
+    "message": "Confirme para continuar",
     "description": "Text of a Options page lower menu button"
   },
   "youve_blocked_num_ads": {
