--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -2822,7 +2822,7 @@
     "description": "Checbox label text for help flow in popup menu."
   },
   "autoplay_videos": {
-    "message": "Автовоспроизведение видео",
+    "message": "Всплывающие видео",
     "description": "Checbox label text for help flow in popup menu."
   },
   "surveys": {
@@ -3149,6 +3149,54 @@
   },
   "adblock_vpn": {
     "message": "AdBlock VPN",
+    "description": "Text of a Options page lower menu button"
+  },
+  "adblock_newsletter": {
+    "message": "Рассылка AdBlock",
+    "description": "Text of a Options page lower menu button"
+  },
+  "keep_touch": {
+    "message": "Оставайтесь на связи!",
+    "description": "Text of a Options page lower menu button"
+  },
+  "all_set": {
+    "message": "Готово!",
+    "description": "Text of a Options page lower menu button"
+  },
+  "youre_awesome": {
+    "message": "Спасибо!",
+    "description": "Text of a Options page lower menu button"
+  },
+  "added_mailing_list": {
+    "message": "Вы подписались на рассылку AdBlock.",
+    "description": "Text of a Options page lower menu button"
+  },
+  "sign_up_mailing": {
+    "message": "Подпишитесь на нашу рассылку, чтобы быть в курсе последних новостей AdBlock.",
+    "description": "Text of a Options page lower menu button"
+  },
+  "email_address_placeholder": {
+    "message": "Введите e-mail адрес",
+    "description": "Text of a Options page lower menu button"
+  },
+  "please_click_confirm": {
+    "message": "Нажмите здесь, если согласны периодически получать новости от нашей команды по электронной почте.",
+    "description": "Text of a Options page lower menu button"
+  },
+  "never_share_email": {
+    "message": "Мы никому не скажем ваш адрес электронной почты.",
+    "description": "Text of a Options page lower menu button"
+  },
+  "join_mailing_list": {
+    "message": "Подписаться на рассылку",
+    "description": "Text of a Options page lower menu button"
+  },
+  "valid_email_address": {
+    "message": "Введите верный адрес эл. почты",
+    "description": "Text of a Options page lower menu button"
+  },
+  "please_confirm": {
+    "message": "Подтвердите, чтобы продолжить",
     "description": "Text of a Options page lower menu button"
   },
   "youve_blocked_num_ads": {
