--- a/_locales/sv/messages.json
+++ b/_locales/sv/messages.json
@@ -2822,7 +2822,7 @@
     "description": "Checbox label text for help flow in popup menu."
   },
   "autoplay_videos": {
-    "message": "Autospelande videor",
+    "message": "Flytande videor",
     "description": "Checbox label text for help flow in popup menu."
   },
   "surveys": {
@@ -3149,6 +3149,54 @@
   },
   "adblock_vpn": {
     "message": "AdBlock VPN",
+    "description": "Text of a Options page lower menu button"
+  },
+  "adblock_newsletter": {
+    "message": "AdBlocks nyhetsbrev",
+    "description": "Text of a Options page lower menu button"
+  },
+  "keep_touch": {
+    "message": "Håll kontakten!",
+    "description": "Text of a Options page lower menu button"
+  },
+  "all_set": {
+    "message": "Allt klart!",
+    "description": "Text of a Options page lower menu button"
+  },
+  "youre_awesome": {
+    "message": "Tack, du är grym!",
+    "description": "Text of a Options page lower menu button"
+  },
+  "added_mailing_list": {
+    "message": "Du har lagts till på AdBlocks utskickslista.",
+    "description": "Text of a Options page lower menu button"
+  },
+  "sign_up_mailing": {
+    "message": "Registrera dig på vår utskickslista för att hålla dig uppdaterad om det senaste hos AdBlock.",
+    "description": "Text of a Options page lower menu button"
+  },
+  "email_address_placeholder": {
+    "message": "Ange din e-postadress",
+    "description": "Text of a Options page lower menu button"
+  },
+  "please_click_confirm": {
+    "message": "Klicka här för att bekräfta att du vill få e-postuppdateringar från vårt team då och då.",
+    "description": "Text of a Options page lower menu button"
+  },
+  "never_share_email": {
+    "message": "Vi kommer aldrig att dela din e-postadress med någon.",
+    "description": "Text of a Options page lower menu button"
+  },
+  "join_mailing_list": {
+    "message": "Gå med i vår utskickslista",
+    "description": "Text of a Options page lower menu button"
+  },
+  "valid_email_address": {
+    "message": "Var god ange en giltig e-postadress",
+    "description": "Text of a Options page lower menu button"
+  },
+  "please_confirm": {
+    "message": "Bekräfta för att fortsätta",
     "description": "Text of a Options page lower menu button"
   },
   "youve_blocked_num_ads": {
