--- a/_locales/zh_CN/messages.json
+++ b/_locales/zh_CN/messages.json
@@ -2822,7 +2822,7 @@
     "description": "Checbox label text for help flow in popup menu."
   },
   "autoplay_videos": {
-    "message": "自动播放视频",
+    "message": "浮动视频",
     "description": "Checbox label text for help flow in popup menu."
   },
   "surveys": {
@@ -3149,6 +3149,54 @@
   },
   "adblock_vpn": {
     "message": "AdBlock VPN",
+    "description": "Text of a Options page lower menu button"
+  },
+  "adblock_newsletter": {
+    "message": "AdBlock 电子通讯",
+    "description": "Text of a Options page lower menu button"
+  },
+  "keep_touch": {
+    "message": "保持联系！",
+    "description": "Text of a Options page lower menu button"
+  },
+  "all_set": {
+    "message": "一切就绪！",
+    "description": "Text of a Options page lower menu button"
+  },
+  "youre_awesome": {
+    "message": "谢谢您，太好了！",
+    "description": "Text of a Options page lower menu button"
+  },
+  "added_mailing_list": {
+    "message": "您已被添加到 AdBlock 邮件列表中。",
+    "description": "Text of a Options page lower menu button"
+  },
+  "sign_up_mailing": {
+    "message": "注册加入我们的邮件列表，以及时获取 AdBlock 的最新信息。",
+    "description": "Text of a Options page lower menu button"
+  },
+  "email_address_placeholder": {
+    "message": "输入您的电子邮件地址",
+    "description": "Text of a Options page lower menu button"
+  },
+  "please_click_confirm": {
+    "message": "请点击这里，确认您愿意接收我们团队不定期的电子邮件更新。",
+    "description": "Text of a Options page lower menu button"
+  },
+  "never_share_email": {
+    "message": "我们绝不会与任何人分享您的电子邮件。",
+    "description": "Text of a Options page lower menu button"
+  },
+  "join_mailing_list": {
+    "message": "加入我们的邮件列表",
+    "description": "Text of a Options page lower menu button"
+  },
+  "valid_email_address": {
+    "message": "请提供有效的电子邮件地址",
+    "description": "Text of a Options page lower menu button"
+  },
+  "please_confirm": {
+    "message": "请确认以继续",
     "description": "Text of a Options page lower menu button"
   },
   "youve_blocked_num_ads": {
