--- a/_locales/zh_TW/messages.json
+++ b/_locales/zh_TW/messages.json
@@ -2822,7 +2822,7 @@
     "description": "Checbox label text for help flow in popup menu."
   },
   "autoplay_videos": {
-    "message": "自動播放影片",
+    "message": "浮動視窗影片",
     "description": "Checbox label text for help flow in popup menu."
   },
   "surveys": {
@@ -3149,6 +3149,54 @@
   },
   "adblock_vpn": {
     "message": "AdBlock VPN",
+    "description": "Text of a Options page lower menu button"
+  },
+  "adblock_newsletter": {
+    "message": "AdBlock 電子報",
+    "description": "Text of a Options page lower menu button"
+  },
+  "keep_touch": {
+    "message": "保持聯絡！",
+    "description": "Text of a Options page lower menu button"
+  },
+  "all_set": {
+    "message": "大功告成！",
+    "description": "Text of a Options page lower menu button"
+  },
+  "youre_awesome": {
+    "message": "謝謝！真酷！",
+    "description": "Text of a Options page lower menu button"
+  },
+  "added_mailing_list": {
+    "message": "已將您加入 AdBlock 郵寄名單。",
+    "description": "Text of a Options page lower menu button"
+  },
+  "sign_up_mailing": {
+    "message": "註冊加入我們的郵寄名單，及時獲得 AdBlock 的最新消息。",
+    "description": "Text of a Options page lower menu button"
+  },
+  "email_address_placeholder": {
+    "message": "請輸入您的電子郵件地址",
+    "description": "Text of a Options page lower menu button"
+  },
+  "please_click_confirm": {
+    "message": "請按此確認您希望收到來自我們團隊的不定期電子報。",
+    "description": "Text of a Options page lower menu button"
+  },
+  "never_share_email": {
+    "message": "我們絕對不會將您的電子郵件分享給任何人。",
+    "description": "Text of a Options page lower menu button"
+  },
+  "join_mailing_list": {
+    "message": "加入郵寄名單",
+    "description": "Text of a Options page lower menu button"
+  },
+  "valid_email_address": {
+    "message": "請提供有效的電子郵件地址",
+    "description": "Text of a Options page lower menu button"
+  },
+  "please_confirm": {
+    "message": "請確認以繼續",
     "description": "Text of a Options page lower menu button"
   },
   "youve_blocked_num_ads": {
