--- a/adblock-betafish/CHANGELOG.txt
+++ b/adblock-betafish/CHANGELOG.txt
@@ -2,6 +2,9 @@
 
 UNRELEASED:
 
+Version: 4.39.0, Date: 2021-10-24
+- Show the /update page to let users know what features have been updated in the last 6 months.
+
 Version: 4.38.0, Date: 2021-10-11
 - Added Distraction Control for AdBlock Premium users
 
