Updated with version: 4.41.0 changes

--- a/adblock-betafish/CHANGELOG.txt
+++ b/adblock-betafish/CHANGELOG.txt
@@ -2,6 +2,21 @@
 
 UNRELEASED:
 
+Version: 4.41.0, Date: 2021-12-10
+- Continue to show /update page for those users that haven't seen the Fall 2021 update
+- Added a CTA to notifiy our users about the AdBlock VPN
+- Updated the bundled Snippets library to 0.3.2
+
+
+Version: 4.40.0, Date: 2021-11-11
+- Continue to show /update page for those users that haven't seen the Fall 2021 update
+- For our AdBlock Premium users, the extension will now add an flag to our website to let the website know the visitor is a premium user
+- Updated the URL that's opened for the VPN CTA on the AdBlock Options page
+- In preparation for manifest V3, and to help us better understand how our users use AdBlock, we've added custom rule counts to the telemetry (ping) data
+- Added an Email CTA to the AdBlock Options page
+- Added host permissions information to the "debug" data available on the Support tab of the AdBlock Option page
+
+
 Version: 4.39.1, Date: 2021-10-25
 - Show the /update page to let users know what features have been updated in the last 6 months.
 
