Updated with version: 4.42.0 changes

--- a/adblock-betafish/CHANGELOG.txt
+++ b/adblock-betafish/CHANGELOG.txt
@@ -2,9 +2,15 @@
 
 UNRELEASED:
 
+Version: 4.42.0, Date: 2022-01-03
+- Added a AdBlock popup menu message about Distraction Control
+- Improved the Distraction Control help flow
+- Made some minor improvements to the Distraction Control tab on the AdBlock options page
+- Removed the functionality to open the /update page
+
 Version: 4.41.0, Date: 2021-12-10
 - Continue to show /update page for those users that haven't seen the Fall 2021 update
-- Added a CTA to notifiy our users about the AdBlock VPN
+- Added a CTA to notify our users about the AdBlock VPN
 - Updated the bundled Snippets library to 0.3.2
 
 
