--- a/_locales/en_GB/messages.json
+++ b/_locales/en_GB/messages.json
@@ -2817,6 +2817,30 @@
     "message": "To contact our support team, visit our [[Help Center]].",
     "description": "Message for help flow in popup menu."
   },
+  "page_is_whitelisted_distraction": {
+    "message": "This page is on your allowlist which is why you are seeing a distraction.",
+    "description": "Message for help flow in popup menu."
+  },
+  "wont_change_anything_distraction": {
+    "message": "We won’t change anything so you’ll continue to see distractions.",
+    "description": "Message for help flow in popup menu."
+  },
+  "reload_not_see_distraction": {
+    "message": "Reload the page so you won't see that distraction anymore!",
+    "description": "Message for help flow in popup menu."
+  },
+  "still_see_distraction": {
+    "message": "Do you still see the distraction?",
+    "description": "Message for help flow in popup menu."
+  },
+  "paused_not_blocking_distraction": {
+    "message": "AdBlock is currently paused, so we are not blocking any distractions.",
+    "description": "panel text on the help flow in popup menu."
+  },
+  "resume_reload_distraction": {
+    "message": "Do you want to enable AdBlock and reload the page?",
+    "description": "panel text on the help flow in popup menu."
+  },
   "newsletter_popups": {
     "message": "Newsletter pop-ups",
     "description": "Checbox label text for help flow in popup menu."
@@ -3079,6 +3103,14 @@
   },
   "check_out_dc": {
     "message": "Block more with Distraction Control",
+    "description": "Part 2 of a call-to-action on the Popup menu"
+  },
+  "block_floating_videos": {
+    "message": "Block Floating Videos",
+    "description": "Part 1 of a call-to-action on the Popup menu"
+  },
+  "get_distractioncontrol": {
+    "message": "Get Distraction Control",
     "description": "Part 2 of a call-to-action on the Popup menu"
   },
   "notification_antiadblock_message": {
