Updated with version: 4.43.0 changes

--- a/_locales/de/messages.json
+++ b/_locales/de/messages.json
@@ -2817,6 +2817,30 @@
     "message": "Wenn Sie unser Support-Team kontaktieren möchten, besuchen Sie unser [[Hilfezentrum]].",
     "description": "Message for help flow in popup menu."
   },
+  "page_is_whitelisted_distraction": {
+    "message": "Diese Seite steht auf Ihrer Positivliste, deshalb sehen Sie eine Ablenkung.",
+    "description": "Message for help flow in popup menu."
+  },
+  "wont_change_anything_distraction": {
+    "message": "Wir werden nichts verändern, also werden Sie weiterhin Ablenkungen sehen.",
+    "description": "Message for help flow in popup menu."
+  },
+  "reload_not_see_distraction": {
+    "message": "Laden Sie die Seite neu, wenn Sie diese Ablenkung nicht mehr sehen möchten!",
+    "description": "Message for help flow in popup menu."
+  },
+  "still_see_distraction": {
+    "message": "Sehen Sie immer noch Ablenkungen?",
+    "description": "Message for help flow in popup menu."
+  },
+  "paused_not_blocking_distraction": {
+    "message": "AdBlock ist derzeit pausiert, daher werden keine Ablenkungen blockiert.",
+    "description": "panel text on the help flow in popup menu."
+  },
+  "resume_reload_distraction": {
+    "message": "Möchten Sie AdBlock aktivieren und die Seite neu laden?",
+    "description": "panel text on the help flow in popup menu."
+  },
   "newsletter_popups": {
     "message": "Newsletter-Popups",
     "description": "Checbox label text for help flow in popup menu."
@@ -3079,6 +3103,14 @@
   },
   "check_out_dc": {
     "message": "Mehr blockieren mit Distraction Control",
+    "description": "Part 2 of a call-to-action on the Popup menu"
+  },
+  "block_floating_videos": {
+    "message": "Floating-Videos blockieren",
+    "description": "Part 1 of a call-to-action on the Popup menu"
+  },
+  "get_distractioncontrol": {
+    "message": "Holen Sie sich Ablenkungskontrolle",
     "description": "Part 2 of a call-to-action on the Popup menu"
   },
   "notification_antiadblock_message": {
