--- a/_locales/es/messages.json
+++ b/_locales/es/messages.json
@@ -2817,6 +2817,30 @@
     "message": "Para contactar con nuestro equipo de soporte técnico, visita nuestro [[Centro de Ayuda]].",
     "description": "Message for help flow in popup menu."
   },
+  "page_is_whitelisted_distraction": {
+    "message": "Esta página está en tu lista de permitidos, por eso estás viendo una distracción.",
+    "description": "Message for help flow in popup menu."
+  },
+  "wont_change_anything_distraction": {
+    "message": "No cambiaremos los ajustes, así que seguirás viendo las distracciones.",
+    "description": "Message for help flow in popup menu."
+  },
+  "reload_not_see_distraction": {
+    "message": "¡Vuelve a cargar la página y no volverás a ver la distracción!",
+    "description": "Message for help flow in popup menu."
+  },
+  "still_see_distraction": {
+    "message": "¿Sigues viendo la distracción?",
+    "description": "Message for help flow in popup menu."
+  },
+  "paused_not_blocking_distraction": {
+    "message": "AdBlock está en pausa, así que no estamos bloqueando ninguna distracción.",
+    "description": "panel text on the help flow in popup menu."
+  },
+  "resume_reload_distraction": {
+    "message": "¿Quieres activar AdBlock y volver a cargar la página?",
+    "description": "panel text on the help flow in popup menu."
+  },
   "newsletter_popups": {
     "message": "Elementos emergentes de los boletines",
     "description": "Checbox label text for help flow in popup menu."
@@ -3079,6 +3103,14 @@
   },
   "check_out_dc": {
     "message": "Bloquea más con Eliminar distracciones",
+    "description": "Part 2 of a call-to-action on the Popup menu"
+  },
+  "block_floating_videos": {
+    "message": "Bloquear vídeos flotantes",
+    "description": "Part 1 of a call-to-action on the Popup menu"
+  },
+  "get_distractioncontrol": {
+    "message": "Obtener control de distracciones",
     "description": "Part 2 of a call-to-action on the Popup menu"
   },
   "notification_antiadblock_message": {
