--- a/_locales/fr/messages.json
+++ b/_locales/fr/messages.json
@@ -2817,6 +2817,30 @@
     "message": "Pour contacter notre équipe d'assistance, visitez notre [[Centre d'aide]].",
     "description": "Message for help flow in popup menu."
   },
+  "page_is_whitelisted_distraction": {
+    "message": "Cette page est sur votre liste d'autorisation, c'est pourquoi vous voyez une distraction.",
+    "description": "Message for help flow in popup menu."
+  },
+  "wont_change_anything_distraction": {
+    "message": "Nous ne changerons rien, donc vous continuerez à voir des distractions.",
+    "description": "Message for help flow in popup menu."
+  },
+  "reload_not_see_distraction": {
+    "message": "Rechargez la page pour ne plus voir cette distraction !",
+    "description": "Message for help flow in popup menu."
+  },
+  "still_see_distraction": {
+    "message": "Vous voyez toujours la distraction ?",
+    "description": "Message for help flow in popup menu."
+  },
+  "paused_not_blocking_distraction": {
+    "message": "AdBlock est actuellement en pause, nous ne bloquons donc aucune distraction.",
+    "description": "panel text on the help flow in popup menu."
+  },
+  "resume_reload_distraction": {
+    "message": "Voulez-vous activer AdBlock et recharger la page ?",
+    "description": "panel text on the help flow in popup menu."
+  },
   "newsletter_popups": {
     "message": "Pop-up des newsletters",
     "description": "Checbox label text for help flow in popup menu."
@@ -3079,6 +3103,14 @@
   },
   "check_out_dc": {
     "message": "Bloquez davantage avec Contrôle des distractions",
+    "description": "Part 2 of a call-to-action on the Popup menu"
+  },
+  "block_floating_videos": {
+    "message": "Bloquer les vidéos flottantes",
+    "description": "Part 1 of a call-to-action on the Popup menu"
+  },
+  "get_distractioncontrol": {
+    "message": "Prenez le contrôle des distractions",
     "description": "Part 2 of a call-to-action on the Popup menu"
   },
   "notification_antiadblock_message": {
