--- a/_locales/ja/messages.json
+++ b/_locales/ja/messages.json
@@ -2817,6 +2817,30 @@
     "message": "サポートチームに連絡するには、私たちの[[ヘルプセンター]]に連絡してください。",
     "description": "Message for help flow in popup menu."
   },
+  "page_is_whitelisted_distraction": {
+    "message": "このページはあなたの許可リストに含まれているため、気が散るものが表示されています。",
+    "description": "Message for help flow in popup menu."
+  },
+  "wont_change_anything_distraction": {
+    "message": "こちら側で変更は行われないため、気が散るものは引き続き表示されます。",
+    "description": "Message for help flow in popup menu."
+  },
+  "reload_not_see_distraction": {
+    "message": "ページを再読み込みすれば今後気が散るものは表示されません！",
+    "description": "Message for help flow in popup menu."
+  },
+  "still_see_distraction": {
+    "message": "まだ気が散る要素が見えますか？",
+    "description": "Message for help flow in popup menu."
+  },
+  "paused_not_blocking_distraction": {
+    "message": "AdBlockは現在一時停止中のため、気が散るものをブロックしていません。",
+    "description": "panel text on the help flow in popup menu."
+  },
+  "resume_reload_distraction": {
+    "message": "AdBlockを有効にし、ページをリロードしますか？",
+    "description": "panel text on the help flow in popup menu."
+  },
   "newsletter_popups": {
     "message": "ニュースレターのポップアップ",
     "description": "Checbox label text for help flow in popup menu."
@@ -3079,6 +3103,14 @@
   },
   "check_out_dc": {
     "message": "ディストラクション管理でさらにブロック",
+    "description": "Part 2 of a call-to-action on the Popup menu"
+  },
+  "block_floating_videos": {
+    "message": "フローティング動画をブロック",
+    "description": "Part 1 of a call-to-action on the Popup menu"
+  },
+  "get_distractioncontrol": {
+    "message": "ディストラクション管理を入手",
     "description": "Part 2 of a call-to-action on the Popup menu"
   },
   "notification_antiadblock_message": {
