--- a/_locales/pt_BR/messages.json
+++ b/_locales/pt_BR/messages.json
@@ -2817,6 +2817,30 @@
     "message": "Para entrar em contato com nossa equipe de suporte, acesse nossa [[Central de Ajuda]].",
     "description": "Message for help flow in popup menu."
   },
+  "page_is_whitelisted_distraction": {
+    "message": "Esta página está na sua lista de permissões, por isso você está a vendo como uma distração.",
+    "description": "Message for help flow in popup menu."
+  },
+  "wont_change_anything_distraction": {
+    "message": "Não vamos mudar nada, então você vai continuar vendo distrações.",
+    "description": "Message for help flow in popup menu."
+  },
+  "reload_not_see_distraction": {
+    "message": "Atualize a página para não ver mais a distração!",
+    "description": "Message for help flow in popup menu."
+  },
+  "still_see_distraction": {
+    "message": "Ainda está vendo a distração?",
+    "description": "Message for help flow in popup menu."
+  },
+  "paused_not_blocking_distraction": {
+    "message": "AdBlock está atualmente pausado, então não estamos bloqueando distrações.",
+    "description": "panel text on the help flow in popup menu."
+  },
+  "resume_reload_distraction": {
+    "message": "Deseja habilitar o AdBlock e recarregar a página?",
+    "description": "panel text on the help flow in popup menu."
+  },
   "newsletter_popups": {
     "message": "Pop-ups de boletins",
     "description": "Checbox label text for help flow in popup menu."
@@ -3079,6 +3103,14 @@
   },
   "check_out_dc": {
     "message": "Bloqueie mais com Controle de Distrações",
+    "description": "Part 2 of a call-to-action on the Popup menu"
+  },
+  "block_floating_videos": {
+    "message": "Bloquear vídeos flutuantes",
+    "description": "Part 1 of a call-to-action on the Popup menu"
+  },
+  "get_distractioncontrol": {
+    "message": "Obtenha o controle de distrações",
     "description": "Part 2 of a call-to-action on the Popup menu"
   },
   "notification_antiadblock_message": {
