--- a/_locales/zh_CN/messages.json
+++ b/_locales/zh_CN/messages.json
@@ -2817,6 +2817,30 @@
     "message": "如需联系我们的支持团队，请访问我们的[[帮助中心]]。",
     "description": "Message for help flow in popup menu."
   },
+  "page_is_whitelisted_distraction": {
+    "message": "此页面在您的允许列表中，所以您才会看到干扰信息。",
+    "description": "Message for help flow in popup menu."
+  },
+  "wont_change_anything_distraction": {
+    "message": "我们不会进行任何更改，因此您将继续看到干扰信息。",
+    "description": "Message for help flow in popup menu."
+  },
+  "reload_not_see_distraction": {
+    "message": "重新加载页面，您将不会再看到该干扰信息！",
+    "description": "Message for help flow in popup menu."
+  },
+  "still_see_distraction": {
+    "message": "仍然会看到干扰吗？",
+    "description": "Message for help flow in popup menu."
+  },
+  "paused_not_blocking_distraction": {
+    "message": "AdBlock 目前已暂停，因此我们并未拦截任何干扰信息。",
+    "description": "panel text on the help flow in popup menu."
+  },
+  "resume_reload_distraction": {
+    "message": "您要启用 AdBlock 并重新加载页面吗？",
+    "description": "panel text on the help flow in popup menu."
+  },
   "newsletter_popups": {
     "message": "电子通讯弹窗",
     "description": "Checbox label text for help flow in popup menu."
@@ -3079,6 +3103,14 @@
   },
   "check_out_dc": {
     "message": "借助“干扰控制”拦截更多内容",
+    "description": "Part 2 of a call-to-action on the Popup menu"
+  },
+  "block_floating_videos": {
+    "message": "拦截浮动视频",
+    "description": "Part 1 of a call-to-action on the Popup menu"
+  },
+  "get_distractioncontrol": {
+    "message": "获取分心控制",
     "description": "Part 2 of a call-to-action on the Popup menu"
   },
   "notification_antiadblock_message": {
