--- a/_locales/zh_TW/messages.json
+++ b/_locales/zh_TW/messages.json
@@ -2817,6 +2817,30 @@
     "message": "若要聯絡我們的支援團隊，請前往[[幫助中心]]。",
     "description": "Message for help flow in popup menu."
   },
+  "page_is_whitelisted_distraction": {
+    "message": "這個網頁在您的允許名單上，因此您會看到干擾內容。",
+    "description": "Message for help flow in popup menu."
+  },
+  "wont_change_anything_distraction": {
+    "message": "我們不會更改任何項目，因此您會繼續看到干擾內容。",
+    "description": "Message for help flow in popup menu."
+  },
+  "reload_not_see_distraction": {
+    "message": "請重新載入頁面，就不會再看到那個干擾內容了！",
+    "description": "Message for help flow in popup menu."
+  },
+  "still_see_distraction": {
+    "message": "您仍會看到干擾內容嗎？",
+    "description": "Message for help flow in popup menu."
+  },
+  "paused_not_blocking_distraction": {
+    "message": "AdBlock 目前已暫停，因此我們沒有阻擋任何干擾內容。",
+    "description": "panel text on the help flow in popup menu."
+  },
+  "resume_reload_distraction": {
+    "message": "您要啟用 AdBlock 並重新載入頁面嗎？",
+    "description": "panel text on the help flow in popup menu."
+  },
   "newsletter_popups": {
     "message": "電子報彈出視窗",
     "description": "Checbox label text for help flow in popup menu."
@@ -3079,6 +3103,14 @@
   },
   "check_out_dc": {
     "message": "啟用干擾控制阻擋更多廣告",
+    "description": "Part 2 of a call-to-action on the Popup menu"
+  },
+  "block_floating_videos": {
+    "message": "阻擋浮動視窗影片",
+    "description": "Part 1 of a call-to-action on the Popup menu"
+  },
+  "get_distractioncontrol": {
+    "message": "取得干擾控制",
     "description": "Part 2 of a call-to-action on the Popup menu"
   },
   "notification_antiadblock_message": {
