--- a/adblock-betafish/CHANGELOG.txt
+++ b/adblock-betafish/CHANGELOG.txt
@@ -2,6 +2,11 @@
 
 UNRELEASED:
 
+Version: 4.43.0, Date: 2022-01-25
+- Fixed several issues on the AdBlock popup menu
+- Removed the CryptoCurrency BitCoin Mining Protection filter list from the list of subscriptions added for new users
+- Continue to show the message about Distraction Control on the AdBlock popup menu
+
 Version: 4.42.0, Date: 2022-01-03
 - Added a AdBlock popup menu message about Distraction Control
 - Improved the Distraction Control help flow
