--- a/_locales/it/messages.json
+++ b/_locales/it/messages.json
@@ -2817,6 +2817,30 @@
     "message": "Per contattare la squadra di assistenza, visita il nostro [[Centro assistenza]].",
     "description": "Message for help flow in popup menu."
   },
+  "page_is_whitelisted_distraction": {
+    "message": "Questa pagina è nella tua lista dei permessi, è per questo che vedi una distrazione.",
+    "description": "Message for help flow in popup menu."
+  },
+  "wont_change_anything_distraction": {
+    "message": "Non cambieremo nulla così continuerai a vedere le distrazioni.",
+    "description": "Message for help flow in popup menu."
+  },
+  "reload_not_see_distraction": {
+    "message": "Ricarica la pagina così non vedrai più quella distrazione!",
+    "description": "Message for help flow in popup menu."
+  },
+  "still_see_distraction": {
+    "message": "Vedi ancora la distrazione?",
+    "description": "Message for help flow in popup menu."
+  },
+  "paused_not_blocking_distraction": {
+    "message": "AdBlock è in pausa, perciò non stiamo bloccando le distrazioni.",
+    "description": "panel text on the help flow in popup menu."
+  },
+  "resume_reload_distraction": {
+    "message": "Vuoi abilitare AdBlock e ricaricare la pagina?",
+    "description": "panel text on the help flow in popup menu."
+  },
   "newsletter_popups": {
     "message": "Pop-up sulle newsletter",
     "description": "Checbox label text for help flow in popup menu."
@@ -3079,6 +3103,14 @@
   },
   "check_out_dc": {
     "message": "Blocca di più con Controllo distrazioni",
+    "description": "Part 2 of a call-to-action on the Popup menu"
+  },
+  "block_floating_videos": {
+    "message": "Blocca i video fluttuanti",
+    "description": "Part 1 of a call-to-action on the Popup menu"
+  },
+  "get_distractioncontrol": {
+    "message": "Ottieni il Controllo distrazioni",
     "description": "Part 2 of a call-to-action on the Popup menu"
   },
   "notification_antiadblock_message": {
