--- a/_locales/nl/messages.json
+++ b/_locales/nl/messages.json
@@ -2817,6 +2817,30 @@
     "message": "Om contact op te nemen met ons ondersteuningsteam kun je ons [[hulpcentrum]] bezoeken.",
     "description": "Message for help flow in popup menu."
   },
+  "page_is_whitelisted_distraction": {
+    "message": "Deze pagina staat op je acceptatielijst, daarom zie je een afleiding.",
+    "description": "Message for help flow in popup menu."
+  },
+  "wont_change_anything_distraction": {
+    "message": "We veranderen niets, zodat je nog steeds afleidingen blijft zien.",
+    "description": "Message for help flow in popup menu."
+  },
+  "reload_not_see_distraction": {
+    "message": "Herlaad de pagina zodra je die afleiding niet meer ziet!",
+    "description": "Message for help flow in popup menu."
+  },
+  "still_see_distraction": {
+    "message": "Zie je de afleiding nog steeds?",
+    "description": "Message for help flow in popup menu."
+  },
+  "paused_not_blocking_distraction": {
+    "message": "AdBlock is momenteel gepauzeerd, we blokkeren dus geen enkele afleiding.",
+    "description": "panel text on the help flow in popup menu."
+  },
+  "resume_reload_distraction": {
+    "message": "Wil je AdBlock inschakelen en de pagina herladen?",
+    "description": "panel text on the help flow in popup menu."
+  },
   "newsletter_popups": {
     "message": "Pop-ups van nieuwsbrieven",
     "description": "Checbox label text for help flow in popup menu."
@@ -3079,6 +3103,14 @@
   },
   "check_out_dc": {
     "message": "Blokkeer meer met afleidingscontrole",
+    "description": "Part 2 of a call-to-action on the Popup menu"
+  },
+  "block_floating_videos": {
+    "message": "Blokkeer zwevende video's",
+    "description": "Part 1 of a call-to-action on the Popup menu"
+  },
+  "get_distractioncontrol": {
+    "message": "Ga voor afleidingscontrole",
     "description": "Part 2 of a call-to-action on the Popup menu"
   },
   "notification_antiadblock_message": {
