--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -2817,6 +2817,30 @@
     "message": "Чтобы связаться с нашей службой поддержки, перейдите на страницу [[центра помощи]].",
     "description": "Message for help flow in popup menu."
   },
+  "page_is_whitelisted_distraction": {
+    "message": "Вы видите отвлекающие элементы, потому что эта страница добавлена в разрешенный список.",
+    "description": "Message for help flow in popup menu."
+  },
+  "wont_change_anything_distraction": {
+    "message": "Мы ничего не поменяли, так что вы продолжите видеть отвлекающие элементы.",
+    "description": "Message for help flow in popup menu."
+  },
+  "reload_not_see_distraction": {
+    "message": "Перезагрузите страницу, и больше отвлекающие элементы вас не потревожат!",
+    "description": "Message for help flow in popup menu."
+  },
+  "still_see_distraction": {
+    "message": "Вам все еще что-то мешает?",
+    "description": "Message for help flow in popup menu."
+  },
+  "paused_not_blocking_distraction": {
+    "message": "Работа AdBlock приостановлена — в данный момент мы не блокируем отвлекающие элементы.",
+    "description": "panel text on the help flow in popup menu."
+  },
+  "resume_reload_distraction": {
+    "message": "Включить AdBlock и перезагрузить страницу?",
+    "description": "panel text on the help flow in popup menu."
+  },
   "newsletter_popups": {
     "message": "Уведомления о новостной рассылке",
     "description": "Checbox label text for help flow in popup menu."
@@ -3079,6 +3103,14 @@
   },
   "check_out_dc": {
     "message": "Блокируйте еще больше отвлекающих элементов",
+    "description": "Part 2 of a call-to-action on the Popup menu"
+  },
+  "block_floating_videos": {
+    "message": "Убрать всплывающие видео",
+    "description": "Part 1 of a call-to-action on the Popup menu"
+  },
+  "get_distractioncontrol": {
+    "message": "Управлять отвлечениями",
     "description": "Part 2 of a call-to-action on the Popup menu"
   },
   "notification_antiadblock_message": {
