--- a/_locales/sv/messages.json
+++ b/_locales/sv/messages.json
@@ -2817,6 +2817,30 @@
     "message": "För att kontakta vårt supportteam, besök vårt [[Hjälpcenter]].",
     "description": "Message for help flow in popup menu."
   },
+  "page_is_whitelisted_distraction": {
+    "message": "Den här sidan är på din tillåt-lista, vilket är anledningen till att du ser en distraktion.",
+    "description": "Message for help flow in popup menu."
+  },
+  "wont_change_anything_distraction": {
+    "message": "Vi ändrar inte något, så du kommer att fortsätta att se distraktioner.",
+    "description": "Message for help flow in popup menu."
+  },
+  "reload_not_see_distraction": {
+    "message": "Uppdatera sidan så att du slipper se distraktionen i fortsättningen!",
+    "description": "Message for help flow in popup menu."
+  },
+  "still_see_distraction": {
+    "message": "Ser du fortfarande distraktionerna?",
+    "description": "Message for help flow in popup menu."
+  },
+  "paused_not_blocking_distraction": {
+    "message": "AdBlock är för tillfället pausat, så vi blockerar inte några distraktioner.",
+    "description": "panel text on the help flow in popup menu."
+  },
+  "resume_reload_distraction": {
+    "message": "Vill du aktivera AdBlock och uppdatera sidan?",
+    "description": "panel text on the help flow in popup menu."
+  },
   "newsletter_popups": {
     "message": "Popups om nyhetsbrev",
     "description": "Checbox label text for help flow in popup menu."
@@ -3079,6 +3103,14 @@
   },
   "check_out_dc": {
     "message": "Blockera mer med Distraktionskontroll",
+    "description": "Part 2 of a call-to-action on the Popup menu"
+  },
+  "block_floating_videos": {
+    "message": "Blockera flytande videor",
+    "description": "Part 1 of a call-to-action on the Popup menu"
+  },
+  "get_distractioncontrol": {
+    "message": "Skaffa distraktionskontroll",
     "description": "Part 2 of a call-to-action on the Popup menu"
   },
   "notification_antiadblock_message": {
